# WvTable-logue

./: .gitignore  Makefile  README.md  WvTable.cpp  common.mk  decimator.h  detune.h  flags.txt  manifest.json  parameters.txt  project.mk  syncgen.py  wtdef.cpp  wtdef.h  wtgen.h
VS-test/: .gitignore  WvTable-test.cpp  WvTable-test.sln  WvTable-test.vcxproj  WvTable-test.vcxproj.filters  plotres.py  userosc.h
juce_plugin/: CMakeLists.txt  Plugin.cpp  README.md
logue-sdk/: README_ja.md
logue-sdk/platform/inc/: userprg.h
logue-sdk/tools/gcc/: get_gcc_linux.sh  get_gcc_msys.sh  get_gcc_osx.sh
minilogue-xd/: Makefile  manifest.json
nutekt-digital/: Makefile  manifest.json
prologue/: Makefile  manifest.json
src/: WvTable.c  WvTable.cpp  adenv.h  compat.h  decimator.h  envlfo.h  userosc2.h  wtdef.c  wtdef.h  wtgen.h
testmodule/: CMakeLists.txt  testosc.py  wvtable.py
